# AI5_Midterm_Seek3D

./: aim_midterm_writeup_2025.txt  embedding_model_evaluate_no_keys.ipynb
Seek3D/: README.md  app.py  chainlit.md  existing_image_features_big.pt  existing_text_features_big.pt  image_ratings_data.json  pyproject.toml  requirements.txt  saved_model_data.json
